<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activity.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/azul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/texto"
            android:hint="@string/email"
            tools:text="@string/tools_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/azul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:text="@string/senha" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_botao_login"
        android:text="@string/log_in"
        style="@style/Botao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <View
        android:id="@+id/divisor1"
        android:layout_width="148dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="#C0CCDA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />

    <View
        android:id="@+id/Divisor2"
        android:layout_width="148dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:background="#C0CCDA"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />

    <TextView
        android:id="@+id/textView"
        style="@style/texto"
        android:layout_width="31dp"
        android:layout_height="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/or"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/azul_opaco"
        app:layout_constraintEnd_toStartOf="@+id/divisor1"
        app:layout_constraintStart_toEndOf="@+id/Divisor2"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/Botao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/shape_botao_resgister"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>